--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <h1>This is Heading</h1> -->
     <script type="module" src="https://embed.croissant.buzz/embed/dist/widget.mjs"></script>
     <script type="module">
-    window.renderMyComponent({ contentUid: '4sGMQIA1', type: 'popup', testMode: false });
+    window.renderMyComponent({ contentUid: '507fb0b2-455f-4680-a798-f8309260f9c8', type: 'popup', testMode: true });
     </script>
     
 
