--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
 </head>
 <body>
-    <!-- <h1>This is Heading</h1> -->
-    <script type="module" src="https://embed.croissant.buzz/embed/dist/widget.mjs"></script>
+    <h1>This is Heading</h1>
     <script type="module">
-    window.renderMyComponent({ contentUid: '507fb0b2-455f-4680-a798-f8309260f9c8', type: 'popup', testMode: true });
+        import { renderMyComponent } from 'https://embed.croissant.buzz/embed/dist/widget.mjs';
+
+        renderMyComponent({ 
+            contentUid: '507fb0b2-455f-4680-a798-f8309260f9c8', 
+            type: 'popup', 
+            testMode: true 
+        });
     </script>
     
 
